@@ -1,21 +1,0 @@
-
-# Migration etch->lenny
-dpkg-maintscript-helper rm_conffile \
-	/etc/devfs/conf.d/nvidia-kernel-nkc \
-		'20051028+1+nmu2~' -- "$@"
-dpkg-maintscript-helper rm_conffile \
-	/etc/modutils/nvidia-kernel-nkc \
-		'20051028+1+nmu2~' -- "$@"
-
-# Migration lenny->squeeze
-dpkg-maintscript-helper mv_conffile \
-	/etc/modprobe.d/nvidia-kernel-nkc \
-	/etc/modprobe.d/nvidia-kernel-common.conf \
-		'20100216+1~' -- "$@"
-
-# Migration squeeze->squeeze
-dpkg-maintscript-helper mv_conffile \
-	/etc/modprobe.d/nvidia-kernel-nkc.conf \
-	/etc/modprobe.d/nvidia-kernel-common.conf \
-		'20100522+1~' -- "$@"
-
