@@ -1,0 +1,11 @@
+
+# Migration etch->lenny
+rm_conffile /etc/devfs/conf.d/nvidia-kernel-nkc '20051028+1+nmu2~'
+rm_conffile /etc/modutils/nvidia-kernel-nkc     '20051028+1+nmu2~'
+
+# Migration lenny->squeeze
+mv_conffile /etc/modprobe.d/nvidia-kernel-nkc      /etc/modprobe.d/nvidia-kernel-common.conf '20100216+1~'
+
+# Migration squeeze->squeeze
+mv_conffile /etc/modprobe.d/nvidia-kernel-nkc.conf /etc/modprobe.d/nvidia-kernel-common.conf '20100522+1~'
+
